--- a/README.textile
+++ b/README.textile
@@ -1,16 +1,14 @@
-EpisodeCMS
-==========
+= EpisodeCMS =
+
 EpisodeCMS is Cake PHP based content management system.
-Visit official website [[http://episodecms.com/]]
+Visit official website http://episodecms.com/
 
 
-Requirements
-------------
+== Requirements == 
 EpisodeCMS is only supported on PHP 5.3.2 and up.
 
 
-Installation
-------------
+== Installation ==
 * Unpack and rename to WEBROOT/Your-Project-Name
 * Set rights recursively 777 for WEBROOT/Your-Project-Name/*
 * Install Wizard not finished yet (install will run if no config.yml in PROJECT-ROOT)
@@ -19,6 +17,5 @@ Installation
 * Check if tmp is clean
 * Use login: admin, password: admin to access backend
 
-Versions
---------
+== Versions ==
  * 0.1.0 - development stage
