Added new admin theme

--- a/modules/core/locales/rus.po
+++ b/modules/core/locales/rus.po
@@ -86,7 +86,7 @@ msgid "Control Panel"
 msgstr "Панель управления"
 
 msgid "Dashboard"
-msgstr "Консоль"
+msgstr "Настройки"
 
 msgid "Update"
 msgstr "Обновить"
